<resources>
    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="number_4" translatable="false">4</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_6" translatable="false">6</string>
    <string name="number_7" translatable="false">7</string>
    <string name="number_8" translatable="false">8</string>
    <string name="number_9" translatable="false">9</string>
    <string name="number_10" translatable="false">10</string>
    <string name="app_name">Edge</string>
    <string name="daemon">守护进程</string>
    <string name="exclude">自动隐藏</string>
    <string name="exclude_summary">不在多任务显示</string>
    <string name="overflow">浮窗权限</string>
    <string name="ball">悬浮球</string>
    <string name="ball_size">悬浮球大小</string>
    <string name="has_permission">已经获得</string>
    <string name="hasnot_permission">还未获得</string>
    <string name="auto_close_ball">自动关闭悬浮球</string>
    <string name="add">添加</string>
    <string name="weather_air_alty">空气质量：</string>
    <string name="menu_account">账号</string>
    <string name="menu_permission">权限</string>
    <string name="menu_settings">设置</string>
    <string name="menu_barrage">弹幕</string>
    <string name="menu_lab">实验室</string>
    <string name="menu_about">关于</string>
    <string name="menu_learn">使用教程</string>
    <string name="menu_admin">管理员</string>
    <string name="version">版本</string>
    <string name="email">邮箱</string>
    <string name="open_in_market">在应用市场中打开</string>
    <string name="no_market_clients">未安装应用市场客户端</string>
    <string name="send_email">发送邮件</string>
    <string name="no_email_clients">未安装邮件客户端</string>
    <string name="login_success">登录成功</string>
    <string name="login">登录</string>
    <string name="please_login">请先登录</string>
    <string name="login_username">用户</string>
    <string name="login_password">密码</string>
    <string name="regiter_phone">手机号</string>
    <string name="regiter_code">验证码</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="login_go">登录</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">注册</string>
    <string name="register">注册</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="reget_sms_code">重新获取</string>
    <string name="millis">秒</string>
    <string name="auto_sync">自动同步</string>
    <string name="auto_sync_summary">每次同步消耗不到5KB流量</string>
    <string name="userid">昵称</string>
    <string name="userphone">电话</string>
    <string name="useremail">邮箱</string>
    <string name="not_set">未设置</string>
    <string name="has_been_set">已经设置，不可修改</string>
    <string name="set_user_info">设置</string>
    <string name="set_user_info_was_null">设置不能为空</string>
    <string name="set_success">设置成功</string>
    <string name="text_next">下一步</string>
    <string name="text_jump">跳过</string>
    <string name="guide_menu_open">点击此处打开抽屉</string>
    <string name="guide_menu_close">关闭抽屉</string>
    <string name="guide_user">登录后可以同步个人设置的Edge数据</string>
    <string name="guide_settings">在设置里可以打开悬浮球\n温馨提示：打开悬浮球之前请先获取浮窗权限</string>
    <string name="guide_permission">先获取浮窗权限，才能使用悬浮球</string>
    <string name="guide_learn">本应用不同常规应用，请您花半分钟认真阅读使用教程</string>
    <string name="guide_done">完成</string>
    <string name="guide_edge_welcome">欢迎观看使用教程</string>
    <string name="guide_edge_add">Edge图标区域内已经添加应用，点击可启动该应用，长按可以替换该应用。</string>
    <string name="guide_edge_not_add">Edge图标区域内还未添加应用，点击可添加手机上的应用。</string>
    <string name="guide_edge_statusbar">此处为Edge的状态栏\n显示天气基本信息\n长按可以切换城市。</string>
    <string name="guide_edge_done">您已经初步了解如何使用Edge了，祝你使用愉快。</string>
    <string name="barrage_toogle">弹幕</string>
    <string name="barrage_debug">弹幕测试</string>
    <string name="barrage_debug_summary">连续点击有惊喜</string>
    <string name="barrage_whitelist">弹幕白名单</string>
    <string name="barrage_filter">弹幕过滤</string>
    <string name="barrage_filter_summary">自定义包含关键字时不出现弹幕</string>
    <string name="notification_permission">弹幕权限</string>
    <string name="radius_format">弧度: %1$d</string>
    <string name="peek_format">位置: %1$d</string>
    <string name="edge_width_format">Edge宽: %1$d</string>
    <string name="edge_height_format">Egde高: %1$d</string>
    <string name="count">Edge数量</string>
    <string name="count_default">默认</string>
    <string name="count_summary">设置Edge数量，建议设置7~8个</string>
    <string name="statusbar_debug">Edge状态栏</string>
    <string name="statusbar_debug_summary">开启后可点击Edge状态栏调节Edge图标弧度、位置</string>
    <string name="edge_item_txt">Edeg图标文字</string>
    <string name="edge_item_txt_summary">开启后Edeg图标上显示对应的应用名称</string>
    <string name="inner_ball_color_title">悬浮球颜色</string>
    <string name="inner_ball_color_summary">可设置悬浮球的颜色</string>
    <string name="barrage_click_title">快捷进入弹幕源</string>
    <string name="barrage_click_summary">点击悬浮球进入弹幕消息源\n弹幕消失后恢复点击手势功能</string>
    <string name="barrage_click_dialog_title">出现弹幕消息时点击将进入到来消息的应用</string>
    <string name="barrage_click_not_feedback">无</string>
    <string name="barrage_click_ball">悬浮球</string>
    <string name="barrage_click_barrage">弹幕消息体</string>
    <string name="barrage_title_color">弹幕标题颜色</string>
    <string name="barrage_summary_color">弹幕内容颜色</string>
    <string name="barrage_background_color">弹幕背景颜色</string>
    <string name="barrage_current_color">当前颜色</string>
    <string name="barrage_background_color_default">还原默认</string>
    <string name="device_admin_crash">因为Android新机制，申请设备管理者时APP会闪退但依然能申请成功（目前正在积极寻找解决的办法）。</string>
    <string name="device_admin_description">获取设备管理者以保证打开的辅助功能不会被自动关闭</string>
    <string name="device_admin">设备管理者</string>
    <string name="device_admin_summary">申请后保证进程常驻以及辅助权限不自动失效</string>
    <string name="remove_device_admin">移除设备管理者</string>
    <string name="remove_device_admin_summary">移除后辅助权限可能会自动失效导致手势等不可用</string>
    <string name="accessibility">辅助权限</string>
    <string name="more_selector">手势功能</string>
    <string name="gesture_none">关闭手势</string>
    <string name="up">上滑（短）</string>
    <string name="up_long">上滑（长）</string>
    <string name="down">下滑（短）</string>
    <string name="down_long">下滑（长）</string>
    <string name="left">左滑（短）</string>
    <string name="left_long">左滑（长）</string>
    <string name="right">右滑（短）</string>
    <string name="right_long">右滑（长）</string>
    <string name="click">点击</string>
    <string name="click_long">长按</string>
    <string name="gesture_portrait">竖屏手势</string>
    <string name="gesture_portrait_summary">自定义手机竖屏时拖拽悬浮球的手势</string>
    <string name="gesture_landscape">横屏手势</string>
    <string name="gesture_landscape_summary">自定义手机横屏时拖拽悬浮球的手势</string>
    <string name="selector_app">选择应用</string>
    <string name="selector_edge">Edge</string>
    <string name="selector_action">全局动作</string>
    <string name="selector_music">控制音乐</string>
    <string name="selector_pay">快捷支付</string>
    <string name="press_action">拖动悬浮球</string>
    <string name="app_not_existed">应用未安装</string>
    <string name="left_edge">左Edge</string>
    <string name="right_edge">右Edge</string>
    <string name="up_edge">上Edge</string>
    <string name="key_back">Back键</string>
    <string name="key_home">Home键</string>
    <string name="key_recents">多任务</string>
    <string name="key_quick_settings">下拉状态栏</string>
    <string name="key_power">长按电源键</string>
    <string name="key_notification">下拉通知</string>
    <string name="key_lock_screen">锁屏(部分机型需要root)</string>
    <string name="key_screen_shot">截屏(部分机型需要root)</string>
    <string name="alipay_scan">支付宝扫码</string>
    <string name="alipay_barcode">支付宝付款码</string>
    <string name="alipay_car_rcode">支付宝乘车码</string>
    <string name="wechat_scan">微信扫码</string>
    <string name="music_last">上一首</string>
    <string name="music_play">播放/暂停</string>
    <string name="music_next">下一首</string>
    <string name="permission_on">已开启</string>
    <string name="permission_off">未开启</string>
    <string name="gesture_control_music">正在使用手势控制音乐</string>
    <string name="update_dialog_title">检测到新版本： </string>
    <string name="update_dialog_message">更新日志： </string>
    <string name="update_dialog_download">去下载</string>
    <string name="auto_hide_ball">自动隐藏悬浮球</string>
    <string name="game_scene">游戏</string>
    <string name="game_scene_summary">进入游戏时自动隐藏悬浮球</string>
    <string name="game_scene_revise">游戏场景</string>
    <string name="game_scene_revise_summary">可添加遗漏的游戏到游戏场景列表中</string>
    <string name="video_scene">视频</string>
    <string name="video_scene_summary">进入视频时自动隐藏悬浮球</string>
    <string name="video_scene_revise">视频场景</string>
    <string name="video_scene_revise_summary">可添加遗漏的视频到视频场景列表中</string>
    <string name="scene_add">添加</string>
    <string name="scene_add_game">可添加遗漏的游戏到游戏列表</string>
    <string name="scene_add_video">可添加遗漏的视频到视频列表</string>
    <string name="longe_click_remove_app">"长按可从列表中移除"</string>
    <string name="remove_app_title">"是否移除\"%s\""</string>
    <string name="remove_app_message">"从场景识别列表中移除，不会卸载此该应用！"</string>
    <string name="push_version_update">更新版本</string>
    <string name="push_version_update_summary">给Android平台的终端推送更新版本信息</string>
    <string name="pay_title">捐赠</string>
    <string name="pay_summary">愿意支持开发者，可以通过捐赠请开发者吃一顿早饭。以下操作为真实金钱捐赠，如不小心支付请邮件开发者进行退款。</string>
    <string name="pay_aliy_title">支付宝捐赠</string>
    <string name="pay_tencent_mm_title">微信捐赠</string>
    <string name="pay_tencent_mm_dialog_title">微信捐赠操作步骤</string>
    <string name="pay_tencent_mm_dialog_message">"点击确定按钮后会跳转微信扫描二维码界面：\n\n 1. 点击右上角的菜单按钮\n\n 2. 点击'从相册选取二维码'\n\n 3. 选择第一张二维码图片即可\n\n"</string>
    <string name="ball_settings">悬浮球及手势</string>
    <string name="barrage_settings">弹幕</string>
    <string name="barrage_style">弹幕样式</string>
    <string name="perssion_title">权限</string>
    <string name="perssion_summary">1. 浮窗权限必须申请，不然用不了悬浮球。\n2. 弹幕权限即为通知权限，申请后才能用弹幕消息的相关功能。\n3. 辅助权限是为了实现场景识别（如游戏场景等）以及实现各种点击等操作。\n</string>
    <string name="device_manager_title">设备管理者</string>
    <string name="device_manager_summary">因为Android的限制，在进程重启后辅助权限自动失效。申请设备管理者能保证:\n 1. 进程保活(非100%)\n 2. 辅助权限不自动失效\n申请设备管理者时程序会闪退一次，但依然能申请成功，望知。\n</string>
    <string name="barrage_postion_title">弹幕位置</string>
    <string name="barrage_postion_summary">数字越小越靠屏幕顶部</string>
    <string name="barrage_speed_title">弹幕速度</string>
    <string name="barrage_speed_summary">数字越大弹幕速度越快</string>
    <string name="barrage_speed">速度</string>
    <string name="barrage_speed_slow_xx">最慢</string>
    <string name="barrage_speed_slow_x">很慢</string>
    <string name="barrage_speed_slow">慢</string>
    <string name="barrage_speed_default">默认</string>
    <string name="barrage_speed_fast">快</string>
    <string name="barrage_speed_fast_x">很快</string>
    <string name="barrage_speed_fast_xx">最快</string>
    <string name="barrage_filter_add_hint">添加关键字</string>
    <string name="barrage_avatar_size">弹幕头像大小</string>
    <string name="barrage_text_size">弹幕字体大小</string>
    <string name="barrage_direction_title">弹幕方向</string>
    <string name="barrage_direction_summary">弹幕在屏幕中的移动方向</string>
    <string name="barrage_direction_right_2_left">右到左</string>
    <string name="barrage_direction_left_2_right">左到右</string>
    <string name="barrage_postion_full">全屏</string>
    <string name="barrage_postion_top">上屏</string>
    <string name="barrage_postion_middle">中屏</string>
    <string name="barrage_postion_bottom">下屏</string>
    <string name="barrage_background_style">弹幕背景形状</string>
    <string name="barrage_background_style_smarry">可自定义弹幕背景四个边角的形状</string>
    <string name="barrage_background_bottom_left_radius">左下角</string>
    <string name="barrage_background_bottom_right_radius">右下角</string>
    <string name="barrage_background_top_left_radius">左上角</string>
    <string name="barrage_background_top_right_radius">右上角</string>
    <string name="barrage_background_stroke_width">描边宽度</string>
</resources>