<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2019 anqi.huang@outlook.com

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout style="@style/wrap_layout">

            <TextView
                style="@style/text_content_layout"
                android:text="@string/barrage_settings" />

            <com.journeyOS.base.widget.SettingSwitch
                android:id="@+id/barrage"
                style="@style/top_layout"
                android:theme="@style/CheckBox"
                settings:settingIcon="@drawable/svg_barrage"
                settings:settingTitle="@string/barrage_toogle" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_selector"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_whitelist"
                settings:settingTitle="@string/barrage_whitelist" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_filter"
                style="@style/bottom_layout"
                settings:settingIcon="@drawable/svg_label"
                settings:settingSummary="@string/barrage_filter_summary"
                settings:settingTitle="@string/barrage_filter" />

        </LinearLayout>

        <LinearLayout style="@style/wrap_layout">

            <TextView
                style="@style/text_content_layout"
                android:text="@string/barrage_style" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_direction"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_slide_left_right"
                settings:settingRightSummary=""
                settings:settingSummary="@string/barrage_direction_summary"
                settings:settingTitle="@string/barrage_direction_title" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_postion"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_barrage_postion"
                settings:settingRightSummary=""
                settings:settingSummary="@string/barrage_postion_summary"
                settings:settingTitle="@string/barrage_postion_title" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_speed"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_run"
                settings:settingRightSummary="@string/barrage_speed_default"
                settings:settingSummary="@string/barrage_speed_summary"
                settings:settingTitle="@string/barrage_speed_title" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_avatar_size"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_avatar"
                settings:settingRightSummary=""
                settings:settingTitle="@string/barrage_avatar_size" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_text_size"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_big_little"
                settings:settingRightSummary=""
                settings:settingTitle="@string/barrage_text_size" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_title"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_title"
                settings:settingRightSummary="@string/barrage_current_color"
                settings:settingTitle="@string/barrage_title_color" />

            <View
                style="@style/bg_line"
                android:visibility="visible" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_summary"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_content"
                settings:settingRightSummary="@string/barrage_current_color"
                settings:settingTitle="@string/barrage_summary_color" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_background"
                style="@style/mid_layout"
                settings:settingIcon="@drawable/svg_background"
                settings:settingRightSummary="@string/barrage_current_color"
                settings:settingTitle="@string/barrage_background_color" />

            <View style="@style/bg_line" />

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_click"
                style="@style/bottom_layout"
                settings:settingIcon="@drawable/svg_click"
                settings:settingRightSummary="@string/barrage_click_not_feedback"
                settings:settingTitle="@string/barrage_click_title" />

        </LinearLayout>

        <LinearLayout style="@style/wrap_layout">

            <com.journeyOS.base.widget.SettingView
                android:id="@+id/barrage_test"
                style="@style/single_layout"
                settings:settingIcon="@drawable/svg_menu_barrage"
                settings:settingTitle="@string/barrage_debug"
                settings:showRight="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="12dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

</ScrollView>