<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2019 anqi.huang@outlook.com

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout style="@style/wrap_layout">

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/up"
            style="@style/top_layout"
            settings:settingIcon="@drawable/svg_gesture_up"
            settings:settingRightSummary=""
            settings:settingTitle="@string/up" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/up_long"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_up_long"
            settings:settingRightSummary=""
            settings:settingTitle="@string/up_long" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/down"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_down"
            settings:settingRightSummary=""
            settings:settingTitle="@string/down" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/down_long"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_down_long"
            settings:settingRightSummary=""
            settings:settingTitle="@string/down_long" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/left"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_left"
            settings:settingRightSummary=""
            settings:settingTitle="@string/left" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/left_long"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_left_long"
            settings:settingRightSummary=""
            settings:settingTitle="@string/left_long" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/right"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_right"
            settings:settingRightSummary=""
            settings:settingTitle="@string/right" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/right_long"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_right_long"
            settings:settingRightSummary=""
            settings:settingTitle="@string/right_long" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/click"
            style="@style/mid_layout"
            settings:settingIcon="@drawable/svg_gesture_click"
            settings:settingRightSummary=""
            settings:settingTitle="@string/click" />

        <View style="@style/bg_line" />

        <com.journeyOS.base.widget.SettingView
            android:id="@+id/click_long"
            style="@style/bottom_layout"
            settings:settingIcon="@drawable/svg_gesture_press_hold"
            settings:settingRightSummary=""
            settings:settingTitle="@string/click_long" />

    </LinearLayout>

</LinearLayout>